fixed prfile page shift

--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -1,7 +1,7 @@
 .Profile {
   margin-top: 150px;
   font-family: "Rubik", sans-serif;
-  margin-left: -20%;
+  //margin-left: -20%;
 }
 
 .profileCardImg {
